--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
 asgiref==3.5.2
+certifi==2022.12.7
+charset-normalizer==2.1.1
 Django==4.1.3
+django-phonenumber-field==7.0.1
+django-twilio==0.14.3
+idna==3.4
+phonenumbers==8.13.3
+PyJWT==2.6.0
+python-decouple==3.6
+pytz==2022.7
+requests==2.28.1
 sqlparse==0.4.3
+twilio==7.16.0
+urllib3==1.26.13
